V2/Documentation utilisateur.adoc
= DOCUMENTATION UTILISATEUR V2

Version 2 +

Date : 26 mai 2023 +

Equipe : BERNARD Julien, ESTRADE Prescilla, MALIQUE Manon +

Groupe 4A1

Projet : DailyBank - SAÉ 2.01 et 2.05

== Sommaire
* <<presentation>>
* <<installation_utilisation>>
* <<fonctionnementv0>>
** <<guichetierv0>>
*** <<Modifier_les_informations_des_clients>>
*** <<Créer_nouveau_client>>
*** <<Consulter_un_compte>>
*** <<Débiter_un_compte>>
** <<chef_agencev0>>
*** <<Rendre_inactif_un_client>>
* <<fonctionnementv1>>
** <<guichetierv1>>
*** <<crediter_compte>>
*** <<debiter_compte>>
*** <<creer_compte>>
*** <<virement_compte>>
*** <<cloturer_compte>>
** <<chef_agencev1>>
*** <<CRUD>>
**** <<create>>
**** <<read>>
**** <<update>>
**** <<delete>>
* <<fonctionnementv2>>
** <<guichetierv2>>
*** <<releve_compte_PDF>>
*** <<crud_prelevements_automatiques>>
**** <<create_prelevements>>
**** <<read_prelevements>>
**** <<update_prelevements>>
**** <<delete_prelevements>>
** <<chef_agencev2>>
*** <<debit_exceptionnel>>
*** <<simuler_emprunt_assurance>>
* <<resultats>> 

[[presentation]]
== 1. Presentation générale, rôle de l'application
L’application DailyBank permet de gérer des comptes bancaires de dépôt pour des clients préalablement créés. Elle dispose de plusieurs fonctionnalités : débiter, créditer un compte, effectuer des virements, consulter un compte, le clôturer, simuler un emprunt ou encore générer un relevé mensuel.

L’application dispose de deux types d’utilisateurs : le guichetier et le chef d’agence.

Le guichetier peut créer un nouveau client, modifier ses informations, créer un compte, le consulter, le débiter, le créditer ou encore le clôturer. De plus, il peut effectuer un virement de compte à compte, générer un relevé mensuel d’un compte en PDF et gérer les prélèvements automatiques.

Le chef d’agence a les mêmes fonctionnalités que le guichetier et peut également rendre inactif un client, gérer les employés, effectuer un débit exceptionnel, simuler un emprunt et simuler une assurance d’emprunt.

[[installation_utilisation]]
== 2. Installation utilisation

Il est nécessaire d'avoir Java 1.8 installé.

Afin d’utiliser le programme de la banque, il est téléchargable et exécutable pour les employés de la banques ainsi que les chefs d’agence afin de gérer toutes les données, comptes et informations de la banque.

Un jar file sera trouvable pour les utilisateurs et l’exécuter ouvrira une fenêtre d’accueil dont une connexion est demandée systématiquement avant de continuer.

image::Images/Accueil.png[]

Les utilisateurs peuvent désormais utiliser l’application et chacune des opérations et possibilités sont expliquées dans le document utilisateur ci-dessous.

[[fonctionnementv0]]
== 3. Fonctionnement de la V0

[[guichetierv0]]
=== 3.1 Guichetier
Le guichetier a accès à plusieurs fonctionnalités : modifier les informations des clients, créer un nouveau client, consulter un compte et débiter un compte. 

[[Modifier_les_informations_des_clients]]
==== 3.1.1 Modifier informations clients

Pour modifier les informations d'un client, le guichetier doit se connecter à l'application. Puis cliquer sur Gestion et sélectionner Clients. Ensuite, il faut cliquer sur Rechercher puis choisir le client dont l'on souhaite modifier ses informations. Par la suite, l'on sélectionne Modifier client, l'on modifie les informations et valide en cliquant sur le bouton Modifier.

image::Images/Modifier_clients.png[]

[[Créer_nouveau_client]]
==== 3.1.2 Créer nouveau client
Le guichetier a la possibilité de créer un compte d'informations d'un client afin qu'il puisse être reconnu par la banque et avoir un compte bancaire.
Pour créer un compte client, il est nécessaire de se connecter en tant que Guichetier.

image::Images/Connexion.png[]

Après s'être connecté, nous devons cliquer sur Gestion/Clients, cela ouvre une nouvelle fenêtre dont recherche de clients, en bas à droite se trouve le bouton nous permettant de créer un compte client, on renseigne toutes  les informations nécessaires.

image::Images/creer_compte.png[]

Une fois cliqué sur Ajouter, le compte client est enregistré dans la base de données est peut désormais posséder un compte bancaire en demandant à un guichetier.

[[Consulter_un_compte]]
==== 3.1.3 Consulter un compte

Afin de consulter un compte, il faut se connecter à l'application en tant que guichetier. Puis cliquer sur Gestion et sélectionner Clients. Après, il faut cliquer sur Rechercher puis choisir un client. Par la suite, l'on sélectionne Comptes client qui ouvre une fenêtre affichant les comptes du client.

image::Images/consulter_compte1.png[]

On sélectionne ensuite le compte voulu et en appuyant sur le bouton Voir opérations toutes les opérations effectuées sur le compte s'affichent.

image::Images/consulter_compte2.png[]

[[Débiter_un_compte]]
==== 3.1.4 Débiter un compte (BD)
Pour débiter un compte, il faut se connecter à l’application en tant que guichetier. Dans une nouvelle fenêtre, il faut cliquer sur Gestion puis sur Clients. On accéde ainsi aux comptes clients à l’aide du bouton Comptes client. Dans cette nouvelle fênetre, on clique sur le bouton Voir opérations qui affiche l’historique des opérations. Par la suite, l’on clique sur Enregistrer Crédit, une fenêtre s'affiche et il faut entrer le montant à déposer et choisir le type d’opération : dépôt espèces ou dépôt chèque. 

Pour valider le crédit ou l’annuler, il faut choisir soit le bouton EffectuerDébit ou le bouton Annuler débit.

image::Images/debiter_compte.png[]

[[chef_agencev0]]
=== 3.2 Chef_agence

Le chef d'agence a la possibilité de rendre inactif un client.

[[Rendre_inactif_un_client]]
==== 3.2.1 Rendre inactif un client
Afin de désactiver un compte client, il est nécessaire de se connecter en tant que Chef d’Agence, une fois fait, il faut se rendre sur la gestion des clients et de cliquer sur le bouton « modifier client »

image::Images/desactiver_client.png[]

On coche « inactif », ce qui permet de désactiver toute opération sur le compte par un Guichetier, un chef d’agence pour retourner à tout moment sur son choix pour remettre le compte client actif

[[fonctionnementv1]]
== 4. Fonctionnement de la V1

[[guichetierv1]]
=== 4.1 Guichetier

Le guichetier a accès à plusieurs fonctionnalités : créditer un compte, débiter un compte, créer un compte, effectuer un virement et clôturer un compte. 

[[crediter_compte]]
==== 4.1.1 Créditer un compte - Prescilla

Pour créditer un compte, il faut se connecter en tant que guichetier. Ensuite, il faut cliquer sur Gestion et choisir Clients. Une fenêtre s’affiche et l’on peut accéder aux comptes clients à l’aide du bouton Comptes client. Dans cette nouvelle fênetre, en cliquant sur le bouton Voir opérations cela affiche l’historique des opérations et il faut cliquer sur Enregistrer Crédit. 

En cliquant sur le bouton Enregistrer Crédit il faut entrer le montant à déposer et choisir le type d’opération : dépôt espèces ou dépôt chèque. 

Enfin, à l’aide du bouton EffectuerDébit l’on peut valider le crédit et en cliquant sur Annuler débit cela annule le débit.

image::Images/crediter_compte.png[]

[[debiter_compte]]
==== 4.1.2 Débiter un compte - Prescilla

Afin de débiter un compte, il faut se connecter à l’application en tant que guichetier. Une nouvelle fenêtre s’affiche à l’écran, il faut cliquer sur Gestion puis sur Clients. Dès lors, l’on peut accéder aux comptes clients à l’aide du bouton Comptes client. Dans cette nouvelle fênetre, en cliquant sur le bouton Voir opérations, l’historique des opérations est affiché. L’on clique ensuite sur Enregistrer Crédit, une fenêtre s’affiche où il faut entrer le montant à déposer et choisir le type d’opération : dépôt espèces ou dépôt chèque. 

L’on peut valider le crédit ou l’annuler, en choisissant soit le bouton EffectuerDébit ou Annuler débit.

image::Images/debiter_compte.png[]

[[creer_compte]]
==== 4.1.3 Créer un compte - Julien
Pour créer un compte, il est nécessaire de se connecté en tant que Guichetier, il est aussi possible de le faire en étant chef d'agence.
Après s'être connecté, nous devons cliquer sur Gestion/Clients afin de rechercher le client que nous voulons créer de compte.

image::Images/recherche_client.png[]

Une nouvelle fenêtre affiche les comptes bancaires du client.

image::Images/voir_compte_bancaires.png[]

En cliquant sur nouveau compte, cela fait apparaître une nouvelle fenêtre où nous pouvons renseigner toutes les informations nécessaires à la création du compte, le montant maximum du découvert (argent négatif sur le compte), si nous voulons ajouté un montant d'argent dès la création du compte, l'ID du Client, de l'agence et son numéro de compte est ajouté automatiquement.

image::Images/creer_compte_bancaire.png[]

Une fois validé, le compte bancaire du client est ajouté avec succès et est prêt à être utiliser pour divers opérations.

[[virement_compte]]
==== 4.1.4 Effectuer un virement de compte à compte - Julien
Le bouton du virement se situe en dessous pour effectuer le débit et crédit, une fois cliquer dessus il ouvre une toute nouvelle fenêtre permettant de faire un virement d'un même client entre deux de ses comptes.

image::Images/Gestion_Virement.png[]

Le montant choisi sera versé sur son second compte et retiré de son premier, bien sûr une exception est effectuée si le montant est plus grand que le solde actuel. 

image::Images/Info_Virement.png[]

L'opération est affiché dans l'historique des opérations du compte.

[[cloturer_compte]]
==== 4.1.5 Clôturer compte - Manon

_En cours de réalisation_

[[chef_agencev1]]
=== 4.2 Chef d'agence

Le chef d'agence a pour fonctionnalités : gérer les employés qui sont le guichetier et le chef d'agence. C'est-à-dire gérer le CRUD : Créer un employé, Consulter un employé, Modifier les informations d'un employé et Supprimer un employé.

[[CRUD]]
==== 4.2.1 Gérer (faire le “CRUD”) les employés (guichetier et chef d’agence)

[[create]]
===== 4.2.1.1 Create - Manon
Cette fonctionnalité permet qu'un chef d'agence puisse créer des employés (guichetiers et chef d'agence).
_En cours de réalisation_

[[read]]
===== 4.2.1.2 Read - Manon
Cette fonctionnalité permet qu'un chef d'agence puisse visualiser les employés (guichetiers et chef d'agence).
_En cours de réalisation_

[[update]]
===== 4.2.1.3 Update - Prescilla
Cette fonctionnalité permet de modifier les employés : guichetier et chef d'agence. Pour cela, il faut se connecter en tant que chef d'agence puis cliquer sur le bouton Gestion et choisir Employés. Une nouvelle fenêtre s'ouvre et affiche les employés. 
Ensuite, il faut sélectionner un employé puis cliquer sur le bouton Modifier employés. Dès lors, l'on peut modifier les informations de l'employé (nom, prénom, adresse, téléphone, e-mail). Pour valider ces modifications, l'on doit cliquer sur Modifier. 

_En cours de réalisation_

[[delete]]
===== 4.2.1.4 Delete - Julien
La possiblité de supprimer un compte bancaire d'un client en appuyant sur le bouton nécessaire, cela affichera un avertissement afin de confirmer l'action.

_En cours de réalisation_

[[fonctionnementv2]]
== 5. Fonctionnement de la V2

[[guichetierv2]]
=== 5.1 Guichetier

Le guichetier a accès à plusieurs fonctionnalités : générer un relevé mensuel d'un compte en PDF et gérer les prélèvements automatiques. 

[[releve_compte_PDF]]
==== 5.1.1 Générer un relevé mensuel d'un compte en PDF - Manon

Un bouton "Générer Relevé" est disponible dans la gestion d'un compte bancaire d'un client, un pdf regroupant toutes les opérations effectués qu'ils soient crédits, débits et virements seront enregistrés dedans.
Trois colonnes seront visibles, la première indique le nom de l'opération puis le montant sera affiché, soit dans la colonne du débit soit celle du crédit.
Enfin, le total final du relevé sera le total crédit moins le total débit afin de démarquer si le client a gagné ou perdu de l'argent durant le mois. 
(ou alors comparé avec le total d'argent du compte pour afficher le total d'argent en fin du mois)

[[crud_prelevements_automatiques]]
=== 5.1.2 Gérer (faire le "CRUD") les prélèvements automatiques - Julien

Le guichetier a la possibilité de gérer les prélèvements automatiques d'un compte bancaire, ce qui signifie qu'il peut en créée en choisissant le montant prélevé chaque mois, savooir quel jour du mois il s'effectue, ainsi à qui cet argent est prélevé, en l'occurence ici c'est la banque.

Dans la gestion des comptes d'un client, nous pouvons voir un nouveau bouton nommé "Voir Prélèvements", c'est à partir d'ici que nous pourrons gérer tous les prélèvements du compte bancaire du client choisis.

image::Images/bouton_prelevement.png[]

[[create_prelevements]]
==== 5.1.2.1 Create
Plusieurs boutons s'offrent à nous, afin d'en créer un nouveau, nous allons cliquer sur "Nouveau prél.auto".

image::Images/creer_prel.png[]

Une fenêtre s'ouvre où il faut remplir les informations nécessaires, le montant, le jour du mois puis en information supplémentaire le bénéficiaire.

image::Images/info_prel.png[]

Il ne manque plus que de confirmer en cliquant sur le bouton "Ajouter" pour qu'il s'affiche dans la gestion des prélèvements du compte.

image::Images/affiche_prel.png[]

[[read_prelevements]]
==== 5.1.2.2 Read

Rejoindre la fenêtre de gestion des prélèvements suffit pour lire et savoir les informations des prélèvements du compte bancaire.

[[update_prelevements]]
==== 5.1.2.3 Update

En cliquant sur le bouton modifier "Modifier pél.auto", la même fenêtre que pour en créer un s'affiche, il est possible de modifier les mêmes informations, c'est-à-dire le montant, le jour et le bénéficiaire, une fois les modifications effectuer, il ne manque plus qu'à les confirmer en cliquant sur "Modifier", les changements sont visibles immédiatement dans la gestion des prélèvements.

image::Images/modifier_prel.png[]

[[delete_prelevements]]
==== 5.1.2.4 Delete

En cliquant sur le bouton "Supprimer prél.auto" après avoir sélectionner un prélèvement, il sera effacer de la base de donnée immédiatement.

[[chef_agencev2]]
=== 5.2 Chef d'agence

Le chef d'agence a pour fonctionnalités : effectuer un débit exceptionnel, simuler un emprunt et simuler une assurance d'emprunt.

[[debit_exceptionnel]]
==== 5.2.1 Effectuer un débit exceptionnel - Prescilla

Le débit exceptionnel consiste à pouvoir débiter un compte même si le montant dépasse le découvert autorisé.

Pour effectuer ce débit exceptionnel, il faut se connecter à l’application en tant que chef d'agence. Dans une nouvelle fenêtre, il faut cliquer sur Gestion puis sur Clients. On selectionne un client puis on clique sur le bouton Comptes client. Dans cette nouvelle fênetre, cela affiche les comptes du client puis on clique sur un compte et sur le bouton Voir opérations qui affiche l’historique des opérations. 

image::Images/debit_exceptionnel1.png[]

Par la suite, l’on clique sur Enregistrer Débit exceptionnel, une fenêtre s'affiche et il faut entrer le montant à débiter et choisir le type d’opération : retrait espèces ou retrait chèque. 

image::Images/debit_exceptionnel2.png[]

Pour valider le débit exceptionnel, on clique sur le bouton Effectuer Débit exceptionnel et on voit ainsi le débit exceptionnel effectué. Sinon, pour l’annuler, il faut choisir le bouton Annuler débit exceptionnel. 

image::Images/debit_exceptionnel3.png[]

[[simuler_emprunt_assurance]]
==== 5.2.2 Simuler un emprunt et une assurance d'emprunt - Prescilla
Cette fonctionnalité consiste à pouvoir simuler une assurance d'emprunt. Pour pouvoir réaliser une simulation d'assurance d'emprunt, l'utilisateur doit se connecter en tant que chef d'agence. Puis, il doit cliquer sur Gestion puis Clients.

Ensuite, il doit cliquer sur le bouton Simuler emprunt.

image::Images/simuler_emprunt1.png[]

Une nouvelle s'ouvre et demande les informations nécessaires à l'emprunt tels que le capital emprunté, la durée de l'emprunt et le taux d'intérêts. 
De plus, il est possible d'effectuer une assurance d'emprunt, pour cela il faut entrer un taux d'assurance en %, sinon mettre ce taux à 0.
Pour annuler la simulation il faut cliquer sur le bouton Annuler emprunt.
 
image::Images/simuler_emprunt2.png[]

Enfin, pour continuer l'opération, on appuie sur le bouton Simuler emprunt qui effectue la simulation. Une nouvelle fenêtre affiche le résultat de la simulation d'emprunt avec ou sans assurance d'emprunt.

image::Images/simuler_emprunt3.png[]

[[resultats]]
== 6. Résultats produits avec jeux d'essai

_En cours de réalisation_
